--- a/templates/home.html
+++ b/templates/home.html
@@ -17,7 +17,18 @@
             <div class="header-content">
                 <h1>Diagnosis Penyakit Perokok menggunakan Metode Forward Chaining dengan First Order Logic
                 </h1>
-                <p>Tugas Akhir Kecerdasan Buatan ( KOM321 ) 2019</p>
+                <div class="row">
+                    <div class="col-md-3 text-left">
+                        <p>Cindana Putri Ramadhani<br> Satria Bayuaji<br> Muhammad
+                            Zulkifli<br>
+                            Indah Puspita</p>
+                    </div>
+                    <div class="col-md-9 text-left">
+                        <p>( G64170022 ) <br>( G64170031 ) <br>(
+                            G64170033 ) <br>( G64170035 )</p>
+                    </div>
+                </div>
+
                 <button type="button" class="btn btn-outline-light" data-toggle="modal" data-target="#exampleModal">Coba
                     Sekarang!</button>
             </div>
