--- a/static/css/style.css
+++ b/static/css/style.css
@@ -36,3 +36,9 @@
     letter-spacing: 3px;
     font-weight: bold;
 }
+
+.source {
+    font-size: 10px;
+    font-style: italic;
+    font-weight: 100;
+}
